--- a/examples/3_portfolio_aggregations.ipynb
+++ b/examples/3_portfolio_aggregations.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,14 +39,15 @@
     "from SBTi.portfolio_aggregation import PortfolioAggregationMethod\n",
     "from SBTi.portfolio_coverage_tvp import PortfolioCoverageTVP\n",
     "from SBTi.temperature_score import TemperatureScore, Scenario, ScenarioType, EngagementType\n",
-    "from SBTi.target_validation import TargetValidation\n",
+    "from SBTi.target_validation import TargetProtocol\n",
+    "from SBTi.interfaces import ETimeFrames, EScope\n",
     "%aimport -pandas\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,35 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "provider = ExcelProvider(path=\"data/data_provider_example.xlsx\")\n",
     "portfolio = pd.read_csv(\"example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
-    "companies = portfolio[[\"company_id\", \"company_name\"]].to_dict(orient=\"records\")\n",
-    "\n",
-    "company_data = SBTi.data.get_company_data([provider], companies)\n",
-    "target_data = SBTi.data.get_targets([provider], companies)\n",
-    "company_data = pd.merge(left=company_data,\n",
-    "                        right=portfolio[\n",
-    "                            [column\n",
-    "                                for column in portfolio.columns\n",
-    "                                if column not in [\"company_name\"]]],\n",
-    "                        how=\"left\",\n",
-    "                        on=[\"company_id\"])\n",
-    "\n",
-    "target_validation = TargetValidation(target_data, company_data)\n",
-    "portfolio_data = target_validation.target_validation()"
+    "companies = [SBTi.interfaces.PortfolioCompany.parse_obj(company) for company in portfolio.to_dict(orient=\"records\")]\n",
+    "portfolio_data = SBTi.utils.get_data([provider], companies)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "temperature_score = TemperatureScore()\n",
+    "temperature_score = TemperatureScore(time_frames=list(SBTi.interfaces.ETimeFrames), scopes=[EScope.S1S2, EScope.S3, EScope.S1S2S3])\n",
     "amended_portfolio = temperature_score.calculate(portfolio_data)"
    ]
   },
@@ -106,11 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_aggregations(aggregations):\n",
+    "    aggregations = aggregations.dict()\n",
     "    for time_frame, time_frame_values in aggregations.items():\n",
     "        for scope, scope_values in time_frame_values.items():\n",
     "            print(\"{} - {}: {} degrees celcius\".format(time_frame, scope, scope_values[\"all\"][\"score\"]))"
@@ -127,11 +117,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "short - S1S2: 2.2349090909090905 degrees celcius\n",
+      "short - S3: 2.8205454545454542 degrees celcius\n",
+      "short - S1S2S3: 2.670272727272727 degrees celcius\n",
+      "mid - S1S2: 2.7351818181818177 degrees celcius\n",
+      "mid - S3: 3.0340000000000003 degrees celcius\n",
+      "mid - S1S2S3: 2.9639090909090906 degrees celcius\n",
+      "long - S1S2: 3.122181818181818 degrees celcius\n",
+      "long - S3: 3.2258181818181817 degrees celcius\n",
+      "long - S1S2S3: 3.199636363636363 degrees celcius\n"
+     ]
+    }
+   ],
    "source": [
-    "print_aggregations(temperature_score.aggregate_scores(amended_portfolio, PortfolioAggregationMethod.WATS, []))"
+    "temperature_score.aggregation_method = PortfolioAggregationMethod.WATS\n",
+    "print_aggregations(temperature_score.aggregate_scores(amended_portfolio))"
    ]
   },
   {
@@ -144,11 +151,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "short - S1S2: 2.29725884873528 degrees celcius\n",
+      "short - S3: 2.4599965951970884 degrees celcius\n",
+      "short - S1S2S3: 2.4295171217466325 degrees celcius\n",
+      "mid - S1S2: 2.8807640760480946 degrees celcius\n",
+      "mid - S3: 2.7215474049114454 degrees celcius\n",
+      "mid - S1S2S3: 2.8232827095737254 degrees celcius\n",
+      "long - S1S2: 2.8746803286943794 degrees celcius\n",
+      "long - S3: 3.2040627788950906 degrees celcius\n",
+      "long - S1S2S3: 3.0651762859922154 degrees celcius\n"
+     ]
+    }
+   ],
    "source": [
-    "print_aggregations(temperature_score.aggregate_scores(amended_portfolio, PortfolioAggregationMethod.TETS, []))"
+    "temperature_score.aggregation_method = PortfolioAggregationMethod.TETS\n",
+    "print_aggregations(temperature_score.aggregate_scores(amended_portfolio))"
    ]
   },
   {
@@ -161,11 +185,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "short - S1S2: 2.362759618170431 degrees celcius\n",
+      "short - S3: 2.474672666371289 degrees celcius\n",
+      "short - S1S2S3: 2.4726669521902704 degrees celcius\n",
+      "mid - S1S2: 2.959496104650197 degrees celcius\n",
+      "mid - S3: 2.3070094100485385 degrees celcius\n",
+      "mid - S1S2S3: 2.5932665818284772 degrees celcius\n",
+      "long - S1S2: 3.1149324732273955 degrees celcius\n",
+      "long - S3: 3.202518255484732 degrees celcius\n",
+      "long - S1S2S3: 3.1659784454974766 degrees celcius\n"
+     ]
+    }
+   ],
    "source": [
-    "print_aggregations(temperature_score.aggregate_scores(amended_portfolio, PortfolioAggregationMethod.MOTS, []))"
+    "temperature_score.aggregation_method = PortfolioAggregationMethod.MOTS\n",
+    "print_aggregations(temperature_score.aggregate_scores(amended_portfolio))"
    ]
   },
   {
@@ -179,11 +220,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "short - S1S2: 2.527586836080241 degrees celcius\n",
+      "short - S3: 2.2113513927400095 degrees celcius\n",
+      "short - S1S2S3: 2.3434074044386035 degrees celcius\n",
+      "mid - S1S2: 2.936485164627035 degrees celcius\n",
+      "mid - S3: 2.000015264219767 degrees celcius\n",
+      "mid - S1S2S3: 2.426945293248226 degrees celcius\n",
+      "long - S1S2: 3.145054144740994 degrees celcius\n",
+      "long - S3: 3.2034859411272287 degrees celcius\n",
+      "long - S1S2S3: 3.179596844185767 degrees celcius\n"
+     ]
+    }
+   ],
    "source": [
-    "print_aggregations(temperature_score.aggregate_scores(amended_portfolio, PortfolioAggregationMethod.EOTS, []))"
+    "temperature_score.aggregation_method = PortfolioAggregationMethod.EOTS\n",
+    "print_aggregations(temperature_score.aggregate_scores(amended_portfolio))"
    ]
   },
   {
@@ -196,11 +254,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "short - S1S2: 2.5183561687334626 degrees celcius\n",
+      "short - S3: 2.2988995021956136 degrees celcius\n",
+      "short - S1S2S3: 2.3941135552165145 degrees celcius\n",
+      "mid - S1S2: 2.899183172185718 degrees celcius\n",
+      "mid - S3: 2.2245900661624995 degrees celcius\n",
+      "mid - S1S2S3: 2.54303244408143 degrees celcius\n",
+      "long - S1S2: 3.1281515835381066 degrees celcius\n",
+      "long - S3: 3.203818315296011 degrees celcius\n",
+      "long - S1S2S3: 3.17269502951844 degrees celcius\n"
+     ]
+    }
+   ],
    "source": [
-    "print_aggregations(temperature_score.aggregate_scores(amended_portfolio, PortfolioAggregationMethod.ECOTS, []))"
+    "temperature_score.aggregation_method = PortfolioAggregationMethod.ECOTS\n",
+    "print_aggregations(temperature_score.aggregate_scores(amended_portfolio))"
    ]
   },
   {
@@ -213,11 +288,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "short - S1S2: 1.7406016806601543 degrees celcius\n",
+      "short - S3: 0.9558434722812519 degrees celcius\n",
+      "short - S1S2S3: 1.1726359096429364 degrees celcius\n",
+      "mid - S1S2: 2.075333404902761 degrees celcius\n",
+      "mid - S3: 2.8540947963478565 degrees celcius\n",
+      "mid - S1S2S3: 2.665344839505484 degrees celcius\n",
+      "long - S1S2: 3.185860428469222 degrees celcius\n",
+      "long - S3: 3.2109632177463996 degrees celcius\n",
+      "long - S1S2S3: 3.2032558320539826 degrees celcius\n"
+     ]
+    }
+   ],
    "source": [
-    "print_aggregations(temperature_score.aggregate_scores(amended_portfolio, PortfolioAggregationMethod.AOTS, []))"
+    "temperature_score.aggregation_method = PortfolioAggregationMethod.AOTS\n",
+    "print_aggregations(temperature_score.aggregate_scores(amended_portfolio))"
    ]
   }
  ],
