--- a/examples/3_portfolio_aggregations.ipynb
+++ b/examples/3_portfolio_aggregations.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "source": [
     "### Calculate the aggregated temperature score\n",
-    "Calculate an aggregated temperature score. This can be done use different aggregation methods. The termperature scores are calculated per time-frame/scope combination."
+    "Calculate an aggregated temperature score. This can be done using different aggregation methods. The termperature scores are calculated per time-frame/scope combination."
    ]
   },
   {
