#220 Add an option to pass a portfolio and provider into the calculate

--- a/examples/1_getting_started.ipynb
+++ b/examples/1_getting_started.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "      <th></th>\n",
        "      <th>company_name</th>\n",
        "      <th>company_id</th>\n",
-       "      <th>ISIN</th>\n",
+       "      <th>company_isin</th>\n",
        "      <th>weights</th>\n",
        "      <th>investment_value</th>\n",
        "      <th>engagement_target</th>\n",
@@ -205,7 +205,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                  company_name    company_id          ISIN weights  \\\n",
+       "                  company_name    company_id  company_isin weights  \\\n",
        "0  Advanced Micro Devices, Inc  US0079031078  US0079031078   6.36%   \n",
        "1           Adobe Systems Inc.  US00724F1012  US00724F1012   1.82%   \n",
        "2              Capgemini Group  FR0000125338  FR0000125338   1.82%   \n",
@@ -220,7 +220,7 @@
        "4          10000000                NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To load the data from the data provider, we have to pass a list of dictionaries, containing a \"company_name\" and \"company_id\"."
+    "To load the data from the data provider, we have to pass a list of IPortfolioCompany instances."
    ]
   },
   {
@@ -249,30 +249,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load the data\n",
-    "We'll call the data provider and ask it to provide us with the targets and the company data. This will take care of all required preprocessing."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "portfolio_data = SBTi.utils.get_data([provider], companies)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Calculate the temperature scores\n",
     "In the amended portfolio you'll find your original portfolio, amended with the emissions and the temperature score."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,12 +264,12 @@
     "    scopes=[EScope.S1S2, EScope.S3, EScope.S1S2S3],\n",
     "    aggregation_method=PortfolioAggregationMethod.WATS\n",
     ")\n",
-    "amended_portfolio = temperature_score.calculate(portfolio_data)"
+    "amended_portfolio = temperature_score.calculate(data_providers=[provider], portfolio=companies)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +559,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 44 columns</p>\n",
+       "<p>10 rows × 47 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -628,22 +611,22 @@
        "8  Emissions|Kyoto Gases -0.483331  2.841338  0.925768               3.20   \n",
        "9  Emissions|Kyoto Gases -0.212692  2.574303  0.609039               3.20   \n",
        "\n",
-       "  temperature_results  \n",
-       "0            0.000000  \n",
-       "1            0.000000  \n",
-       "2            0.000000  \n",
-       "3            0.000000  \n",
-       "4            1.000000  \n",
-       "5            0.727326  \n",
-       "6            1.000000  \n",
-       "7            1.000000  \n",
-       "8            1.000000  \n",
-       "9            1.000000  \n",
+       "   temperature_results  \n",
+       "0             0.000000  \n",
+       "1             0.000000  \n",
+       "2             0.000000  \n",
+       "3             0.000000  \n",
+       "4             1.000000  \n",
+       "5             0.727326  \n",
+       "6             1.000000  \n",
+       "7             1.000000  \n",
+       "8             1.000000  \n",
+       "9             1.000000  \n",
        "\n",
-       "[10 rows x 44 columns]"
+       "[10 rows x 47 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +703,7 @@
        "35.45"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
