Moved function definition to utils file

--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -52,6 +52,7 @@
     "from SBTi.temperature_score import TemperatureScore, Scenario, ScenarioType, EngagementType\n",
     "from SBTi.target_validation import TargetProtocol\n",
     "from SBTi.interfaces import ETimeFrames, EScope\n",
+    "from examples.utils import anonymize\n",
     "%aimport -pandas\n",
     "import pandas as pd"
    ],
@@ -77,39 +78,6 @@
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
     "if not os.path.isfile(\"example_portfolio.csv\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/example_portfolio.csv\", \"example_portfolio.csv\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [
-    "def anonymize(portfolio, provider):\n",
-    "    portfolio_companies = portfolio['company_name'].unique()\n",
-    "    for index, company_name in enumerate(portfolio_companies):\n",
-    "        portfolio.loc[portfolio['company_name'] == company_name, 'company_id'] = 'C' + str(index + 1)\n",
-    "        portfolio.loc[portfolio['company_name'] == company_name, 'company_isin'] = 'C' + str(index + 1)\n",
-    "        provider.data['fundamental_data'].loc[provider.data['fundamental_data']['company_name'] == company_name, 'company_id'] = 'C' + str(index + 1)\n",
-    "        provider.data['fundamental_data'].loc[provider.data['fundamental_data']['company_name'] == company_name, 'company_isic'] = 'C' + str(index + 1)\n",
-    "        provider.data['target_data'].loc[provider.data['target_data']['company_name'] == company_name, 'company_id'] = 'C' + str(index + 1)\n",
-    "        portfolio.loc[portfolio['company_name'] == company_name, 'company_name'] = 'Company' + str(\n",
-    "            index + 1)\n",
-    "        provider.data['fundamental_data'].loc[provider.data['fundamental_data']['company_name'] == company_name, 'company_name'] = 'Company' + str(\n",
-    "                    index + 1)\n",
-    "        provider.data['target_data'].loc[provider.data['target_data']['company_name'] == company_name, 'company_name'] = 'Company' + str(\n",
-    "                    index + 1)\n",
-    "    for index, company_name in enumerate(provider.data['fundamental_data']['company_name'].unique()):\n",
-    "        if company_name not in portfolio['company_name'].unique():\n",
-    "            provider.data['fundamental_data'].loc[provider.data['fundamental_data']['company_name'] == company_name, 'company_id'] = '_' + str(index + 1)\n",
-    "            provider.data['fundamental_data'].loc[provider.data['fundamental_data']['company_name'] == company_name, 'company_name'] = 'Company_' + str(\n",
-    "                                index + 1)\n",
-    "    return portfolio, provider"
    ],
    "metadata": {
     "collapsed": false,
@@ -205,7 +173,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Save anonymized portfolio data"
+    "### Save anonymized data for SBTi target validation\n",
+    "In order for the targets to be validated by SBTi, you can save your data locally. By running the anonymize function, you can replace company identifiers with meaningless substitutes."
    ],
    "metadata": {
     "collapsed": false
@@ -213,10 +182,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "portfolio_data.to_clipboard(excel=True, index=False)"
+    "portfolio, provider = anonymize(portfolio, provider)"
    ],
    "metadata": {
     "collapsed": false,
@@ -228,21 +197,88 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Save anonymized data provider data - seems to be included in portfolio_data dataframe"
+    "In order to store the portfolio and provider data locally, two options apply.\n",
+    "If you use the SBTi tool from a docker container, for each of the following 3 cells:\n",
+    "- Run the cell\n",
+    "- Open an Excel file\n",
+    "- Right-click an Excel cell and click 'paste' or select an Excel cell and press Ctrl+v\n",
+    "- Save the Excel file"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "portfolio.to_clipboard(excel=True, index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "provider.data['fundamental_data'].to_clipboard(excel=True, index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "provider.data['target_data'].to_clipboard(excel=True, index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "If you run the SBTi tool locally, you:\n",
+    "- Specify the directory and filenames in the cell below\n",
+    "- Run the cell below"
    ],
    "metadata": {
     "collapsed": false
    }
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "Save applied settings for computations"
+    "portfolio_filename = 'C://Users//username//Documents//portfolio.xlsx'\n",
+    "provider_filename = 'C://Users//username//Documents//provider.xlsx'\n",
+    "portfolio.to_excel(portfolio_filename, index=False)\n",
+    "provider.data['fundamental_data'].to_excel(provider_filename, sheet_name='fundamental_data', index=False)\n",
+    "provider.data['target_data'].to_excel(provider_filename, sheet_name='target_data', index=False)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
    }
   }
