--- a/examples/3_portfolio_aggregations.ipynb
+++ b/examples/3_portfolio_aggregations.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "source": [
     "### Calculate the aggregated temperature score\n",
-    "Calculate an aggregated temperature score. This can be done using different aggregation methods. The termperature scores are calculated per time-frame/scope combination."
+    "Calculate an aggregated temperature score. This can be done use different aggregation methods. The termperature scores are calculated per time-frame/scope combination."
    ]
   },
   {
@@ -118,7 +118,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -143,174 +147,129 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### TETS\n",
-    "Total emissions weighted temperature score (TETS): Temperature scores are allocated based on historical emission weights using total company emissions. "
-   ]
+    "Total emissions weighted temperature score (TETS): Temperature scores are allocated based on historical emission weights using total company emissions."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "short - S1S2: 2.29725884873528 degrees celcius\n",
-      "short - S3: 2.4599965951970884 degrees celcius\n",
-      "short - S1S2S3: 2.4295171217466325 degrees celcius\n",
-      "mid - S1S2: 2.8807640760480946 degrees celcius\n",
-      "mid - S3: 2.7215474049114454 degrees celcius\n",
-      "mid - S1S2S3: 2.8232827095737254 degrees celcius\n",
-      "long - S1S2: 2.8746803286943794 degrees celcius\n",
-      "long - S3: 3.2040627788950906 degrees celcius\n",
-      "long - S1S2S3: 3.0651762859922154 degrees celcius\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "temperature_score.aggregation_method = PortfolioAggregationMethod.TETS\n",
     "print_aggregations(temperature_score.aggregate_scores(amended_portfolio))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### MOTS\n",
     "Market Owned emissions weighted temperature score (MOTS): Temperature scores are allocated based on an equity ownership approach."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "short - S1S2: 2.362759618170431 degrees celcius\n",
-      "short - S3: 2.474672666371289 degrees celcius\n",
-      "short - S1S2S3: 2.4726669521902704 degrees celcius\n",
-      "mid - S1S2: 2.959496104650197 degrees celcius\n",
-      "mid - S3: 2.3070094100485385 degrees celcius\n",
-      "mid - S1S2S3: 2.5932665818284772 degrees celcius\n",
-      "long - S1S2: 3.1149324732273955 degrees celcius\n",
-      "long - S3: 3.202518255484732 degrees celcius\n",
-      "long - S1S2S3: 3.1659784454974766 degrees celcius\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "temperature_score.aggregation_method = PortfolioAggregationMethod.MOTS\n",
     "print_aggregations(temperature_score.aggregate_scores(amended_portfolio))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### EOTS\n",
     "Enterprise Owned emissions weighted temperature score (EOTS): Temperature scores are allocated based\n",
-    "on an enterprise ownership approach. "
-   ]
+    "on an enterprise ownership approach."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "short - S1S2: 2.527586836080241 degrees celcius\n",
-      "short - S3: 2.2113513927400095 degrees celcius\n",
-      "short - S1S2S3: 2.3434074044386035 degrees celcius\n",
-      "mid - S1S2: 2.936485164627035 degrees celcius\n",
-      "mid - S3: 2.000015264219767 degrees celcius\n",
-      "mid - S1S2S3: 2.426945293248226 degrees celcius\n",
-      "long - S1S2: 3.145054144740994 degrees celcius\n",
-      "long - S3: 3.2034859411272287 degrees celcius\n",
-      "long - S1S2S3: 3.179596844185767 degrees celcius\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "temperature_score.aggregation_method = PortfolioAggregationMethod.EOTS\n",
     "print_aggregations(temperature_score.aggregate_scores(amended_portfolio))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### ECOTS\n",
-    "Enterprise Value + Cash emissions weighted temperature score (ECOTS): Temperature scores are allocated based on an enterprise value (EV) plus cash & equivalents ownership approach. "
-   ]
+    "Enterprise Value + Cash emissions weighted temperature score (ECOTS): Temperature scores are allocated based on an enterprise value (EV) plus cash & equivalents ownership approach."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "short - S1S2: 2.5183561687334626 degrees celcius\n",
-      "short - S3: 2.2988995021956136 degrees celcius\n",
-      "short - S1S2S3: 2.3941135552165145 degrees celcius\n",
-      "mid - S1S2: 2.899183172185718 degrees celcius\n",
-      "mid - S3: 2.2245900661624995 degrees celcius\n",
-      "mid - S1S2S3: 2.54303244408143 degrees celcius\n",
-      "long - S1S2: 3.1281515835381066 degrees celcius\n",
-      "long - S3: 3.203818315296011 degrees celcius\n",
-      "long - S1S2S3: 3.17269502951844 degrees celcius\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "temperature_score.aggregation_method = PortfolioAggregationMethod.ECOTS\n",
     "print_aggregations(temperature_score.aggregate_scores(amended_portfolio))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### AOTS\n",
-    "Total Assets emissions weighted temperature score (AOTS): Temperature scores are allocated based on a total assets ownership approach. "
-   ]
+    "Total Assets emissions weighted temperature score (AOTS): Temperature scores are allocated based on a total assets ownership approach."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "short - S1S2: 1.7406016806601543 degrees celcius\n",
-      "short - S3: 0.9558434722812519 degrees celcius\n",
-      "short - S1S2S3: 1.1726359096429364 degrees celcius\n",
-      "mid - S1S2: 2.075333404902761 degrees celcius\n",
-      "mid - S3: 2.8540947963478565 degrees celcius\n",
-      "mid - S1S2S3: 2.665344839505484 degrees celcius\n",
-      "long - S1S2: 3.185860428469222 degrees celcius\n",
-      "long - S3: 3.2109632177463996 degrees celcius\n",
-      "long - S1S2S3: 3.2032558320539826 degrees celcius\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "temperature_score.aggregation_method = PortfolioAggregationMethod.AOTS\n",
     "print_aggregations(temperature_score.aggregate_scores(amended_portfolio))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
