Updated for changes in SBTi package

--- a/examples/4_analysis.ipynb
+++ b/examples/4_analysis.ipynb
@@ -196,7 +196,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "To load the data from the data provider, we have to pass a list of dictionaries, containing a \"company_name\" and \"company_id\"."
+    "To load the data from the data provider, we have to pass a list of IPortfolioCompany instances."
    ],
    "metadata": {
     "collapsed": false
@@ -215,33 +215,7 @@
     }
    ],
    "source": [
-    "portfolio[\"company_isin\"] = portfolio.ISIN\n",
-    "companies = [SBTi.interfaces.PortfolioCompany.parse_obj(company) for company in portfolio.to_dict(orient=\"records\")]\n",
-    "print(portfolio.to_dict(orient=\"records\"))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Combine portolio and provider data\n",
-    "We'll call the data provider and ask it to provide us with the targets and the company data. This will take care of all required preprocessing."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [
-    "portfolio_data = SBTi.utils.get_data([provider], companies)"
+    "companies = SBTi.utils.dataframe_to_portfolio(portfolio)"
    ],
    "metadata": {
     "collapsed": false,
@@ -280,7 +254,8 @@
     "    time_frames=time_frames,\n",
     "    scopes=scopes\n",
     ")\n",
-    "amended_portfolio = temperature_score.calculate(portfolio_data)"
+    "amended_portfolio = temperature_score.calculate(data_providers=[provider], portfolio=companies)\n",
+    "amended_portfolio.head()"
    ],
    "metadata": {
     "collapsed": false,
@@ -350,8 +325,8 @@
    "source": [
     "### Grouping companies\n",
     "The tool allows the computation of temperature scores for _groups_ of companies. In this example we group the scores by\n",
-    "sector and region, and leave the timeframe and scope unchanged. As grouping variables, any categorical variable in the\n",
-    "fundamental data provided by a data provider can be used."
+    "sector and region, and leave the timeframe and scope unchanged. Any categorical variable in the\n",
+    "fundamental data provided by a data provider can be used as grouping variables."
    ],
    "metadata": {
     "collapsed": false
@@ -367,7 +342,7 @@
     "    scopes=scopes,\n",
     "    grouping=['sector', 'region']\n",
     ")\n",
-    "grouped_portfolio = temperature_score.calculate(portfolio_data)\n",
+    "grouped_portfolio = temperature_score.calculate(data_providers=[provider], portfolio=companies)\n",
     "grouped_aggregations = temperature_score.aggregate_scores(grouped_portfolio)\n",
     "\n",
     "# plot_grouped_heatmap(grouped_aggregations)"
@@ -441,28 +416,9 @@
     "temperature_score = TemperatureScore(time_frames=time_frames,\n",
     "                                     scopes=scopes,\n",
     "                                     grouping=grouping)\n",
-    "amended_portfolio = temperature_score.calculate(portfolio_data)\n",
+    "amended_portfolio = temperature_score.calculate(data_providers=[provider], portfolio=companies)\n",
     "aggregated_portfolio = temperature_score.aggregate_scores(amended_portfolio)\n",
-    "# company_contributions = collect_company_contributions(aggregated_portfolio, amended_portfolio, analysis_parameters)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
-   "source": [
-    "timeframe = 'mid'\n",
-    "scope = 'S1S2'\n",
-    "sector_investments = company_contributions.groupby(grouping).investment_value.sum().values\n",
-    "sector_contributions = company_contributions.groupby(grouping).contribution.sum().values\n",
-    "sector_names = company_contributions.groupby(grouping).contribution.sum().keys()\n",
-    "sector_temp_scores = [aggregation.score for aggregation in aggregated_portfolio[timeframe][scope]['grouped'].values()]"
+    "company_contributions = collect_company_contributions(aggregated_portfolio, amended_portfolio, analysis_parameters)"
    ],
    "metadata": {
     "collapsed": false,
@@ -628,7 +584,8 @@
     "scenario_data = SBTi.utils.get_data([provider], scenario_companies)\n",
     "\n",
     "temperature_score.scenario = scenario\n",
-    "scenario_scores = temperature_score.calculate(scenario_data)\n",
+    "scenario_companies = SBTi.utils.dataframe_to_portfolio(scenario_portfolio)\n",
+    "scenario_scores = temperature_score.calculate(data_providers=[provider], portfolio=scenario_companies)\n",
     "scenario_aggregated = temperature_score.aggregate_scores(scenario_scores)\n",
     "print_aggregations(scenario_aggregated)"
    ],
