Changed utils import

--- a/examples/4_analysis.ipynb
+++ b/examples/4_analysis.ipynb
@@ -49,8 +49,17 @@
     "from SBTi.interfaces import ETimeFrames, EScope\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from examples.utils import collect_company_contributions, plot_grouped_statistics, anonymize, print_aggregations, \\\n",
-    "    plot_grouped_heatmap, print_scenario_gain, print_grouped_scores"
+    "\n",
+    "import urllib.request\n",
+    "import os\n",
+    "if not os.path.isfile(\"utils.py\"):\n",
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/utils.py\", \"utils.py\")\n",
+    "try:\n",
+    "    from utils import collect_company_contributions, plot_grouped_statistics, anonymize, print_aggregations, \\\n",
+    "        plot_grouped_heatmap, print_scenario_gain, print_grouped_scores\n",
+    "except:\n",
+    "    from examples.utils import collect_company_contributions, plot_grouped_statistics, anonymize, print_aggregations, \\\n",
+    "        plot_grouped_heatmap, print_scenario_gain, print_grouped_scores"
    ],
    "metadata": {
     "collapsed": false,
@@ -65,20 +74,14 @@
     "### Download the dummy data provider"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "outputs": [],
    "source": [
-    "import urllib.request\n",
-    "import os\n",
-    "\n",
     "if not os.path.isdir(\"data\"):\n",
     "    os.mkdir(\"data\")\n",
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
