Updated notebook for changes in SBTi package

--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -10,7 +10,7 @@
    },
    "source": [
     "# SBTi Temperature Alignment tool - Reporting\n",
-    "This notebook ..."
+    "This notebook can be used to compute your portfolio's temperature scores and save the results for the TVT to check their validity."
    ]
   },
   {
@@ -40,8 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -52,7 +61,7 @@
     "from SBTi.temperature_score import TemperatureScore, Scenario, ScenarioType, EngagementType\n",
     "from SBTi.target_validation import TargetProtocol\n",
     "from SBTi.interfaces import ETimeFrames, EScope\n",
-    "from examples.utils import anonymize\n",
+    "from examples.utils import anonymize, print_aggregations, print_grouped_scores\n",
     "%aimport -pandas\n",
     "import pandas as pd"
    ],
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# Download the dummy data\n",
@@ -88,15 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "provider = ExcelProvider(path=\"data/data_provider_example.xlsx\")\n",
     "portfolio = pd.read_csv(\"example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
-    "portfolio[\"company_isin\"] = portfolio.ISIN\n",
-    "portfolio, provider = anonymize(portfolio, provider)\n",
-    "companies = [SBTi.interfaces.PortfolioCompany.parse_obj(company) for company in portfolio.to_dict(orient=\"records\")]\n",
-    "portfolio_data = SBTi.utils.get_data([provider], companies)"
+    "# portfolio, provider = anonymize(portfolio, provider)\n",
+    "companies = SBTi.utils.dataframe_to_portfolio(portfolio)"
    ],
    "metadata": {
     "collapsed": false,
@@ -117,15 +124,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [],
    "source": [
-    "time_frames = list(SBTi.interfaces.ETimeFrames)\n",
-    "scopes = [EScope.S1S2, EScope.S3, EScope.S1S2S3]\n",
+    "time_frames = [SBTi.interfaces.ETimeFrames.MID]\n",
+    "scopes = [EScope.S1S2, EScope.S1S2S3]\n",
     "fallback_score = 3.2\n",
     "model = 4\n",
     "aggregation_method = PortfolioAggregationMethod.WATS\n",
-    "grouping = None"
+    "grouping = ['sector']"
    ],
    "metadata": {
     "collapsed": false,
@@ -136,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "temperature_score = TemperatureScore(\n",
@@ -156,12 +163,135 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Compute scores and aggregated scores."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "outputs": [],
    "source": [
-    "amended_portfolio = temperature_score.calculate(portfolio_data)\n",
+    "amended_portfolio = temperature_score.calculate(data_providers=[provider], portfolio=companies)\n",
     "aggregated_scores = temperature_score.aggregate_scores(amended_portfolio)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Checks\n",
+    "The following scores are performed:\n",
+    "- Portfolio score\n",
+    "- Score per sector\n",
+    "- Percentage covered by targets vs. default scores\n",
+    "- Percentage of SBTs in portfolio"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mid - S1S2: 2.55 degrees Celcius\n",
+      "mid - S1S2S3: 2.82 degrees Celcius\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_aggregations(aggregated_scores)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "mid - S1S2\n",
+      "Communication Services: 3.20 degrees Celcius\n",
+      "Consumer Discretionary: 2.00 degrees Celcius\n",
+      "Consumer Staples: 3.20 degrees Celcius\n",
+      "Energy: 3.20 degrees Celcius\n",
+      "Financials: 3.20 degrees Celcius\n",
+      "Health Care: 2.70 degrees Celcius\n",
+      "Industrials: 2.33 degrees Celcius\n",
+      "Information Technology: 1.20 degrees Celcius\n",
+      "Materials: 3.20 degrees Celcius\n",
+      "Real Estate: 2.59 degrees Celcius\n",
+      "Utilities: 2.44 degrees Celcius\n",
+      "\n",
+      "mid - S1S2S3\n",
+      "Communication Services: 3.20 degrees Celcius\n",
+      "Consumer Discretionary: 3.02 degrees Celcius\n",
+      "Consumer Staples: 3.20 degrees Celcius\n",
+      "Energy: 3.20 degrees Celcius\n",
+      "Financials: 3.11 degrees Celcius\n",
+      "Health Care: 3.05 degrees Celcius\n",
+      "Industrials: 2.70 degrees Celcius\n",
+      "Information Technology: 2.08 degrees Celcius\n",
+      "Materials: 3.20 degrees Celcius\n",
+      "Real Estate: 3.08 degrees Celcius\n",
+      "Utilities: 2.50 degrees Celcius\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_grouped_scores(aggregated_scores)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part of portfolio with SBTi approved targets is 35.45%\n"
+     ]
+    }
+   ],
+   "source": [
+    "portfolio_coverage_tvp = PortfolioCoverageTVP()\n",
+    "coverage = portfolio_coverage_tvp.get_portfolio_coverage(amended_portfolio.copy(), PortfolioAggregationMethod.WATS)\n",
+    "print(\"Part of portfolio with SBTi approved targets is {c:.2f}%\".format(c=coverage))"
    ],
    "metadata": {
     "collapsed": false,
