--- a/examples/4_analysis.ipynb
+++ b/examples/4_analysis.ipynb
@@ -48,18 +48,7 @@
     "from SBTi.target_validation import TargetProtocol\n",
     "from SBTi.interfaces import ETimeFrames, EScope\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import urllib.request\n",
-    "import os\n",
-    "if not os.path.isfile(\"utils.py\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/utils.py\", \"utils.py\")\n",
-    "try:\n",
-    "    from utils import collect_company_contributions, plot_grouped_statistics, anonymize, print_aggregations, \\\n",
-    "        plot_grouped_heatmap, print_scenario_gain, print_grouped_scores\n",
-    "except:\n",
-    "    from examples.utils import collect_company_contributions, plot_grouped_statistics, anonymize, print_aggregations, \\\n",
-    "        plot_grouped_heatmap, print_scenario_gain, print_grouped_scores"
+    "import matplotlib.pyplot as plt"
    ],
    "metadata": {
     "collapsed": false,
@@ -71,7 +60,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Download the dummy data provider"
+    "### Download resources for Google Colab environment"
    ],
    "metadata": {
     "collapsed": false
@@ -82,12 +71,23 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
+    "import urllib.request\n",
+    "import os\n",
+    "\n",
     "if not os.path.isdir(\"data\"):\n",
     "    os.mkdir(\"data\")\n",
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
     "if not os.path.isfile(\"example_portfolio.csv\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/example_portfolio.csv\", \"example_portfolio.csv\")"
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/example_portfolio.csv\", \"example_portfolio.csv\")\n",
+    "if not os.path.isfile(\"utils.py\"):\n",
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/utils.py\", \"utils.py\")\n",
+    "try:  # Import statement when run in Google Colabs\n",
+    "    from utils import collect_company_contributions, plot_grouped_statistics, anonymize, print_aggregations, \\\n",
+    "        plot_grouped_heatmap, print_scenario_gain, print_grouped_scores\n",
+    "except:  # Import statement when run locally\n",
+    "    from examples.utils import collect_company_contributions, plot_grouped_statistics, anonymize, print_aggregations, \\\n",
+    "        plot_grouped_heatmap, print_scenario_gain, print_grouped_scores"
    ],
    "metadata": {
     "collapsed": false,
