--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -73,6 +73,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Download resources for Google Colab environment"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "outputs": [],
@@ -86,7 +95,15 @@
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
     "if not os.path.isfile(\"example_portfolio.csv\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/example_portfolio.csv\", \"example_portfolio.csv\")"
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/example_portfolio.csv\", \"example_portfolio.csv\")\n",
+    "if not os.path.isfile(\"utils.py\"):\n",
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/utils.py\", \"utils.py\")\n",
+    "try:  # Import statement when run in Google Colabs\n",
+    "    from utils import collect_company_contributions, plot_grouped_statistics, anonymize, print_aggregations, \\\n",
+    "        plot_grouped_heatmap, print_scenario_gain, print_grouped_scores\n",
+    "except:  # Import statement when run locally\n",
+    "    from examples.utils import collect_company_contributions, plot_grouped_statistics, anonymize, print_aggregations, \\\n",
+    "        plot_grouped_heatmap, print_scenario_gain, print_grouped_scores"
    ],
    "metadata": {
     "collapsed": false,
