--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -29,7 +29,8 @@
    "outputs": [],
    "source": [
     "# Only required if you didn't install the module yet\n",
-    "!pip install SBTi"
+    "# !pip install SBTi\n",
+    "!pip install git+git://github.com/OFBDABV/SBTi"
    ],
    "metadata": {
     "collapsed": false,
@@ -96,7 +97,7 @@
     "if not os.path.isfile(\"example_portfolio.csv\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/example_portfolio.csv\", \"example_portfolio.csv\")\n",
     "if not os.path.isfile(\"utils.py\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/utils.py\", \"utils.py\")\n",
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/%23210_David/examples/utils.py\", \"utils.py\")\n",
     "try:  # Import statement when run in Google Colabs\n",
     "    from utils import collect_company_contributions, plot_grouped_statistics, anonymize, print_aggregations, \\\n",
     "        plot_grouped_heatmap, print_scenario_gain, print_grouped_scores\n",
