--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -119,7 +119,7 @@
    "source": [
     "Specify the data files to use (portfolio and company data). Default example data is used.\n",
     "To change the files, first upload (when using Google Colab) or place the files to the data map (when running locally).\n",
-    "Next, change the file locations between the quotes below.\n"
+    "Next, change the file locations between the quotes below.\n",
     "provider = ExcelProvider(path=\"data/data_provider_example.xlsx\")\n",
     "portfolio = pd.read_csv(\"example_portfolio.csv\", encoding=\"iso-8859-1\")\n",
     "companies = SBTi.utils.dataframe_to_portfolio(portfolio)"
